# whirl

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
app/: CMakeLists.txt  WhirlApplication.cpp
assets/shaders/: circle.wsh  quad.wsh  rounded_quad.wsh  rquad.wsh
include/: GuiApplication.hpp  VideoMode.hpp  Whirl.hpp
include/error/: WhirlError.hpp
include/logger/: Logger.hpp
include/math/: Math.hpp
include/renderer/: CircleRenderer.hpp  Color.hpp  DrawMode.hpp  GuiRenderer.hpp  IndexBuffer.hpp  QuadRenderer.hpp  Renderer.hpp  RoundedQuadRenderer.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexLayout.hpp
lib/glad/include/glad/: gl.h
src/: GuiApplication.cpp  Whirl.cpp  graphics.rs  lib.rs  math.rs
src/engine/: color.rs  group.rs  pass.rs  pipeline.rs  resource.rs  sampler.rs  shader.rs  texture.rs
src/graphics/: buffer.rs  color.rs  group.rs  layout.rs  pass.rs  pipeline.rs  resource.rs  sampler.rs
src/math/: mat3.rs  mat4.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
src/renderer/: CircleRenderer.cpp  GuiRenderer.cpp  IndexBuffer.cpp  QuadRenderer.cpp  Renderer.cpp  RoundedQuadRenderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
