[package]
name = "whirl"
version = "0.1.0"
description = "A graphics engine written in Rust, powered by wgpu"
authors = ["Tem3dy <tem3dy@gmail.com>"]
license = "MIT"
repository = "https://github.com/Tem3dy/whirl"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
image = "0.25.8"
wgpu = "27.0.1"
